fix overflow

--- a/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/NavMenu.razor.scss
+++ b/src/Templates/Boilerplate/Bit.Boilerplate/src/Client/Boilerplate.Client.Core/Components/Layout/NavMenu.razor.scss
@@ -8,10 +8,10 @@
     z-index: 16;
     height: 100%;
     display: flex;
-    overflow: auto;
     position: fixed;
     min-height: 100%;
     max-height: 100vh;
+    overflow: hidden auto;
     flex-flow: column nowrap;
     width: rem2($navMenuWidth);
     justify-content: flex-start;
